--- a/html/inventory.html
+++ b/html/inventory.html
@@ -19,14 +19,17 @@
 </body>
 
 <style>
+body{
+background-color:rgba(0,0,0,0.20);
+}
   .column{
     position: absolute;
     left: 0;
     right: 0;
     width: 30%;
     margin: 0 1.5%;
-    background: #472626;
-    border-radius: 3px;
+    background-color:rgba(0,0,0,0.55);
+    border-radius: 1px;
     min-height: 130px;
   }
   .column.box1{
@@ -85,6 +88,39 @@
       width: 100px;
       line-height: 100px;
     }
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #dfdfdf;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ffffff;
+  border-radius: 0px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
 </style>
 
 
