Front-end update

--- a/html/inventory.html
+++ b/html/inventory.html
@@ -28,7 +28,7 @@ background-color:rgba(0,0,0,0.20);
     right: 0;
     width: 30%;
     margin: 0 1.5%;
-    background-color:rgba(0,0,0,0.55);
+    background-color:rgba(0,0,0,0.40);
     border-radius: 1px;
     min-height: 130px;
   }
@@ -44,7 +44,8 @@ background-color:rgba(0,0,0,0.20);
     width: 100px;
     height: 120px;
     margin: 5px;
-    background: rgb(56, 28, 28);
+	border: 1px solid black;
+	background-color:rgba(0,0,0,0.30);
     z-index: 10;
     color: #fff;
   }
@@ -75,7 +76,7 @@ background-color:rgba(0,0,0,0.20);
     .item-content-footer{
         height: 20%;
         width: 100%;
-        background-color: gray;
+        background-color:rgba(40,40,40,0.70);
     }
     .item-content-amount-moved{
       background-color: rgba(0, 0, 0, 0.6);
