--- a/html/inventory.html
+++ b/html/inventory.html
@@ -19,6 +19,15 @@
 </body>
 
 <style>
+@font-face {
+  font-family: crock;
+  src: url(crock.ttf);
+}
+*{
+font-family: crock;
+}
+
+
 body{
 background-color:rgba(0,0,0,0.25);
 }
